🎉auto update by Gmeek action

--- a/backup/基于命令行的网易播放器.md
+++ b/backup/基于命令行的网易播放器.md
@@ -5,7 +5,7 @@ githu上已经有很多基于命令行的第三方网易云播放器了，但是
 winget install go-musicfox
 ```
 
-截面如图所示：
+运行截图如下图所示：
 ![ ](https://sean-xia.github.io/musicfox.png)
 
 使用方法请参考软件主页，基本上是键盘控制的，也支持快捷键。
