🎉auto update by Gmeek action

--- a/backup/伪分布式大数据开发环境搭建指南V1.0.md
+++ b/backup/伪分布式大数据开发环境搭建指南V1.0.md
@@ -1,7 +1,5 @@
 
 
-
-
 本教程由作者**xhx** 与 **Claud 3.7 Sonnet**  共同创作完成。
 
 本系统基于**CentOS7 2009** 版，其他版本系统可能存在各种问题，请不要轻易尝试，以免无谓浪费时间。适用于虚拟机环境或者物理机环境。推荐在**VirtualBox** 中安装虚拟机来完成。终端工具建议使用**MobarXterm**，文件传输工具使用**WinSCP**。
@@ -127,7 +125,8 @@ systemctl restart mysqld
 ```scala
 ALTER USER 'root'@'localhost' IDENTIFIED BY '123456';
 ```
-### 开启远程访问
+
+开启远程访问
 
 * 授予 root 用户从任何主机访问的权限
 
