🎉auto update by Gmeek action

--- a/backup/伪分布式大数据开发环境搭建指南V1.0.md
+++ b/backup/伪分布式大数据开发环境搭建指南V1.0.md
@@ -28,6 +28,7 @@
 
 * Flume 1.9.0
 
+本指南所需要的软件下载链接为：https://pan.quark.cn/s/49707c42257e
 
 基本上和大数据职业院校技能大赛江苏省省赛所要求的环境一致。大数据的开发环境对版本的依赖性较高，没有必要追求新版的组件，以避免出现各种莫名其妙的BUG。
 
