--- a/backup/伪分布式大数据开发环境搭建指南V1.0.md
+++ b/backup/伪分布式大数据开发环境搭建指南V1.0.md
@@ -288,16 +288,27 @@ vi /opt/module/hadoop-3.1.3/sbin/start-yarn.sh
 export YARN_RESOURCEMANAGER_USER=root
 export YARN_NODEMANAGER_USER=root
 
+#编辑stop-yarn.sh文件，同上。
 
-# 免密
+
+# 生成密钥对，实现ssh免密访问
 ssh-keygen
 ssh-copy-id master
 # 修改hadoop-env.sh
 vi /opt/module/hadoop-3.1.3/etc/hadoop/hadoop-env.sh
 export JAVA_HOME=/opt/module/jdk1.8.0
+
+
+
 # 启动Hadoop
 /opt/module/hadoop-3.1.3/sbin/start-dfs.sh
 /opt/module/hadoop-3.1.3/sbin/start-yarn.sh
+
+#修改hdfs目录权限，让其他用户可远程修改hdfs文件系统。生产环境不推荐
+
+hdfs dfs chmod -R 777  /
+
+
 ```
 ## 4. 安装ZooKeeper 3.5.7
 
