🎉auto update by Gmeek action

--- a/backup/伪分布式大数据开发环境搭建指南V1.0.md
+++ b/backup/伪分布式大数据开发环境搭建指南V1.0.md
@@ -43,6 +43,7 @@
 mkdir -p /opt/module
 mkdir -p /opt/software
 
+# 使用winscp工具将所需软件拷贝到/opt/software目录下，如果是Linux系统请使用scp命令
 
 # 创建数据目录
 mkdir -p /data
@@ -55,7 +56,8 @@ echo 'export PATH=$PATH:$JAVA_HOME/bin' >> /etc/profile
 
 # 设置主机名和hosts
 echo "master" > /etc/hostname
-echo "127.0.0.1 master" >> /etc/hosts
+#假设本机地址为192.168.55.123
+echo "192.168.55.123 master" >> /etc/hosts
 
 
 # 刷新环境变量
